# actionkit-templates

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml  setup.py  sonar-project.properties
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yaml  python-app.yml
actionkit_templates/: aktemplates.py  moveon_fakeapi.py  settings.py
actionkit_templates/contexts/: account_contexts.py  donation_contexts.py  event_context_json.py  event_contexts.py  lib.py  page_contexts.py  survey_contexts.py
actionkit_templates/smarty-streets-test-sdk/: package-lock.json
actionkit_templates/smarty-streets-test-sdk/src/: ClientBuilder.js
actionkit_templates/templates/: homepagetest.html  wrapper.html
actionkit_templates/templatetags/: actionkit_tags.py  ak_universal.py  humanize.py  switchcase.py
dsa_actionkit/: aktemplates.py  moveon_fakeapi.py  settings.py  test.py  urls.py  views.py
dsa_actionkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dsa_actionkit/contexts/: account_contexts.py  donation_contexts.py  event_context_json.py  event_contexts.py  event_places.csv  lib.py  page_contexts.py  survey_contexts.py
dsa_actionkit/templates/: wrapper.html
dsa_actionkit/templatetags/: actionkit_tags.py  ak_universal.py  switchcase.py
template_set/: recurring_info.html  recurring_update.html
tests/: test_user_landing_page.py  tests.py
